--- a/projects/capstone/starter/requirements.txt
+++ b/projects/capstone/starter/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.4.2
 attrs==19.3.0
 awscli==1.18.31
 beautifulsoup4==4.8.2
@@ -11,6 +12,10 @@ colorama==0.4.3
 cryptography==2.8
 docutils==0.15.2
 Flask==1.1.1
+Flask-Cors==3.0.8
+Flask-Migrate==2.5.3
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
 google-api-core==1.16.0
 google-api-python-client==1.8.0
 google-auth==1.11.3
@@ -25,6 +30,7 @@ itsdangerous==1.1.0
 Jinja2==2.11.1
 jmespath==0.9.5
 libusb==1.0.22b2
+Mako==1.1.2
 MarkupSafe==1.1.1
 more-itertools==8.2.0
 oauthlib==3.1.0
@@ -32,6 +38,7 @@ packaging==20.3
 Pillow==7.0.0
 pluggy==0.13.1
 protobuf==3.11.3
+psycopg2-binary==2.8.5
 py==1.8.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -43,6 +50,7 @@ PyQt5==5.14.1
 PyQt5-sip==12.7.1
 pytest==5.4.1
 python-dateutil==2.8.1
+python-editor==1.0.4
 pytz==2019.3
 pyusb==1.0.2
 PyYAML==5.3.1
@@ -52,6 +60,7 @@ rsa==3.4.2
 s3transfer==0.3.3
 six==1.14.0
 soupsieve==2.0
+SQLAlchemy==1.3.16
 tqdm==4.43.0
 Unidecode==1.1.1
 uritemplate==3.0.1
